--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    
   <display-name>ShoppingMall</display-name>
+	<listener>
+		<listener-class>com.minimall.listener.LoginCheck</listener-class>
+	</listener>
   <servlet>
-    <servlet-name>MController</servlet-name> 
+    <servlet-name>MController</servlet-name>
     <servlet-class>
 		com.minimall.controller.MController</servlet-class>
   </servlet>
@@ -11,7 +13,6 @@
     <servlet-name>MController</servlet-name>
     <url-pattern>*.mo</url-pattern>
   </servlet-mapping>
-  	
   <servlet>
     <servlet-name>GController</servlet-name>
     <servlet-class>
@@ -21,7 +22,6 @@
     <servlet-name>GController</servlet-name>
     <url-pattern>*.go</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>OController</servlet-name>
     <servlet-class>
@@ -31,7 +31,6 @@
     <servlet-name>OController</servlet-name>
     <url-pattern>*.oo</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>QController</servlet-name>
     <servlet-class>
@@ -40,8 +39,7 @@
   <servlet-mapping>
     <servlet-name>QController</servlet-name>
     <url-pattern>*.qn</url-pattern>
-  </servlet-mapping>  
-  
+  </servlet-mapping>
   <servlet>
     <servlet-name>REBController</servlet-name>
     <servlet-class>
@@ -51,9 +49,6 @@
     <servlet-name>REBController</servlet-name>
     <url-pattern>*.reb</url-pattern>
   </servlet-mapping>
-  
-  
-  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -61,5 +56,5 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+  </welcome-file-list>                    
 </web-app>
